syntax = "proto3";

package greet;

option go_package="pkg/greet";

message Greeting {
	// unary
	string first_name = 1;
	string last_name = 2;
}

message GreetRequest {
	Greeting greeting = 1;
}

message GreetResponse {
	string result = 1;
}

message Number {
	int64 value = 1;
}

message Msg {
	int32  code = 1;
	string text = 2;
}

message File {
	string text = 1;
	bytes  content = 2;
}

service GreetService {
	// unary
	rpc Greet(GreetRequest) returns (GreetResponse) {};

	// server streaming
	rpc GreetStream(GreetRequest) returns (stream GreetResponse) {};

	// client streaming
	rpc Multiply(stream Number) returns (Number) {};

	// client and server streaming
	rpc Hello(stream Msg) returns (stream Msg) {};

	// pending, in_progress, success, failed
	rpc Upload(stream File) returns (stream Msg) {};
}
